# asymmetric-strike-team

./: .env.example  .env.sepolia  .env.test  .gitignore  BUILD_CONTEXT.md  BUILD_P1.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  RUST_REFACTOR_AND_PRODUCTION_HARDENING.md  VALIDATION_CHECKLIST.md  WHITEPAPER.md  WORKSPACE_ORGANIZATION.md  actuary.py  cli.py  dashboard.py  dashboard.stderr  dashboard.stdout  dashboard_fixed.py  demo.py  grind.py  install.sh  integrate_real_execution.py  main.py  monitor_test.py  nlp_dashboard.py  onboarding.py  optimized_param_validator.py  optimized_qwnt_config.py  optimized_requirements.txt  paper_trader.py  pricing.py  production_qwnt_config.py  quick_fine_tune.py  quick_test_public_rpc.sh  qwnt_trading_system.py  realistic_fine_tune.py  requirements.txt  run.sh  (+40 more)
agents/: actuary.py  oracle.py  reaper.py  slinger.py  whisperer.py
ai_agents/: __init__.py  actuary.py  engine.py  memory.py  rating.py  reaper.py  researcher.py  slinger.py  whisperer.py
archive/experimental/: main_enhanced.py  main_mcp_integrated.py  main_pro.py  main_simple.py
archive/python-prototype/: check_agents.py  debug_actuary.py  decision_helper.py  demo_x_bot.py  fine_tuning_optimizer.py  integrate_mcp_pipeline.py  integrate_optimized_params.py  whisperer.py
archive/python-prototype/agents/: alchemist.py  cex_slinger.py  enhanced_whisperer.py  performance_tracker.py  phantom_mcp_agent.py  qwnt_enhanced_whisperer.py  risk_manager.py  sentiment_enhancer.py  sentinel.py  slinger.py
archive/python-prototype/data/: phantom_executions.json  positions.json
config/: default.toml  testnet.toml
core/: models.py  position_store.py
crates/ast-actuary/: Cargo.toml
crates/ast-actuary/src/: goplus.rs  lib.rs
crates/ast-core/: Cargo.toml
crates/ast-core/src/: close.rs  config.rs  error.rs  lib.rs  market_data.rs  types.rs
crates/ast-observe/: Cargo.toml
crates/ast-observe/src/: bridge.rs  lib.rs
crates/ast-reaper/: Cargo.toml
crates/ast-reaper/src/: lib.rs  persistence.rs  state_machine.rs
crates/ast-safety/: Cargo.toml
crates/ast-safety/src/: api_health.rs  breaker.rs  lib.rs
crates/ast-slinger/: Cargo.toml
crates/ast-slinger/src/: cex.rs  dex.rs  gas.rs  lib.rs  live_slinger.rs  slippage.rs  tx_manager.rs  venue_resolver.rs  wallet_monitor.rs
crates/ast-whisperer/: Cargo.toml
crates/ast-whisperer/src/: dexscreener.rs  lib.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  StrategyPanel.tsx  styles.css  types.ts  useWebSocket.ts
data/positions/: bridge.json  clarity.json  echo.json  flow.json  insight.json  nurture.json  swift.json  thrive.json
docs/guides/: DEPLOYMENT_CHECKLIST.md  MCP_INTEGRATION_SUMMARY.md  MCP_WIRING_SUMMARY.md  README_PRO.md  REAL_EXECUTION_GUIDE.md  RUN_MCP_INTEGRATION.md  TRADINGVIEW_MCP_INTEGRATION_GUIDE.md  WHITEPAPER.md
docs/performance/: PERFORMANCE_ANALYSIS.md  PERFORMANCE_IMPROVEMENT_SUMMARY.md  benchmark_current.py
docs/plans/: LANGUAGE_DECISION_MATRIX.md  OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_PLAN.md  RUST_REWRITE_PLAN.md  TESTING_PLAN.md  VISUALIZATION_INTEGRATION_PLAN.md  paper_validation_plan.py
docs/reports/: FINE_TUNING_SUMMARY.md  QWNT_AGENTS_STATUS.md  RUST_REWRITE_COMPLETE_SUMMARY.md
docs/validation/: VALIDATION_README.md
docs/visualization/: VISUALIZATION_INTEGRATION_GUIDE.md  visualization_system.py
eval/: __init__.py  benchmark.py  metrics.py  portfolio.py  report.py  strategy.py
execution/: real_slinger.py  slinger.py  unified_slinger.py
monitoring_reports/: progress_report_20260412_190809.json  progress_report_20260412_190904.json  progress_report_20260412_191834.json  progress_report_20260412_203114.json
optimized/: DEPLOYMENT_GUIDE.md  async_actuary.py  async_pipeline.py  main.py  optimized_slinger.py  performance_benchmark.py  real_time_monitor.py
results/tests/: fine_tune_results.json  hardening_test_results.json  realistic_qwnt_results.json  simple_performance.json
scripts/run/: create_launchd_agent.sh  deploy.sh  monitor_every_3h.sh  run_demo.py  run_fine_tune.sh  run_fine_tuning.py  run_mcp_demo.sh  run_simple_test.py  schedule_monitoring.sh  start_48h_test.sh  start_nlp_dashboard.sh
src/: learning.rs  llm.rs  main.rs
tests/: test_reaper_restore.py
visualization/: quick_chart.py  qwnt_dashboard.py  test_visualization.py  tradingview_chart_generator.py  tradingview_visualizer.py
visualization/test_output/: market_regime_20260412_005525.json
workspace_refs/: RELATED_PROJECTS.md
