[package]
name = "asymmetric-strike-team"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "crates/ast-core",
    "crates/ast-whisperer",
    "crates/ast-actuary",
    "crates/ast-slinger",
    "crates/ast-reaper",
    "crates/ast-safety",
    "crates/ast-observe",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "ws"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.36", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
alloy-primitives = { version = "0.8", features = ["serde"] }

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

ast-actuary = { path = "crates/ast-actuary" }
ast-core = { path = "crates/ast-core" }
ast-observe = { path = "crates/ast-observe" }
ast-reaper = { path = "crates/ast-reaper" }
ast-safety = { path = "crates/ast-safety" }
ast-slinger = { path = "crates/ast-slinger" }
ast-whisperer = { path = "crates/ast-whisperer" }
