[package]
name = "ast-actuary"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
ast-core = { path = "../ast-core" }
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
