[package]
name = "ast-reaper"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
tokio.workspace = true

[dependencies]
async-trait.workspace = true
ast-core = { path = "../ast-core" }
ast-safety = { path = "../ast-safety" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
